Accidentally created a bug in the gallery were the photos were cropped. Fixed by changing the center class for the 'ready to book' section text to center-book. Commiting to save photos in gallery as they should be.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ footer{
   position: relative;
  }
 
-.center{
+.center-book{
 margin: 0;
   position: absolute;
   top: 50%;
